--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <h3 class="popup__title">Редактировать профиль</h3>
             <form class="popup__container">
                 <input type="text" id="heading" name="heading" placeholder="Жак-Ив Кусто"
-                    class="popup__input popup__container_heading">
+                    class="popup__input popup__input_heading">
                 <input type="text" id="subheading" name="subheading" placeholder="Исследователь океана"
-                    class="popup__input popup__container_subheading">
+                    class="popup__input popup__input_subheading">
                 <button type="submit" class="popup__addBtn" title="Сохранить">Сохранить</button>
             </form>
         </div>
