--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
-                    <button type="submit" title="Редактировать профиль" class="profile__edit"></button>
+                    <button type="button" aria-label="Редактировать профиль" title="Редактировать профиль"
+                        class="profile__edit-btn"></button>
                 </div>
-                <button type="button" title="Добавить новую фотографию" class="profile__add"></button>
+                <button type="button" aria-label="Добавить новую фотографию" title="Добавить новую фотографию"
+                    class="profile__add-btn"></button>
             </section>
             <section class="elements">
                 <ul class="elements__items">
@@ -30,42 +32,48 @@
                         <img src="./image/sudan.jpg" alt="Судан" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Судан</h2>
-                            <button type="button" title="Нравится" class="elements__like"></button>
+                            <button type="button" aria-label="Нравится" title="Нравится"
+                                class="like__btn like__active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
                         <img src="./image/maldive.jpg" alt="Мальдивы" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Мальдивы</h2>
-                            <button type="button" title="Нравится" class="elements__like"></button>
+                            <button type="button" aria-label="Нравится" title="Нравится"
+                                class="like__btn like__active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
                         <img src="./image/portugali1.jpg" alt="Португалия" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Португалия</h2>
-                            <button type="button" title="Нравится" class="elements__like"></button>
+                            <button type="button" aria-label="Нравится" title="Нравится"
+                                class="like__btn like__active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
                         <img src="./image/kumano.jpg" alt="Кумано" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Кумано</h2>
-                            <button type="button" title="Нравится" class="elements__like"></button>
+                            <button type="button" aria-label="Нравится" title="Нравится"
+                                class="like__btn like__active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
                         <img src="./image/rodos.jpg" alt="Родос" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Родос</h2>
-                            <button type="button" title="Нравится" class="elements__like"></button>
+                            <button type="button" aria-label="Нравится" title="Нравится"
+                                class="like__btn like__active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
                         <img src="./image/portugal.jpg" alt="Португалия" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Португалия</h2>
-                            <button type="button" title="Нравится" class="elements__like"></button>
+                            <button type="button" aria-label="Нравится" title="Нравится"
+                                class="like__btn like__active"></button>
                         </div>
                     </li>
                 </ul>
@@ -78,19 +86,19 @@
     </div>
 
     <div class="popup">
-        <div class="popup-form">
-            <button class="popup__close" title="Закрыть форму"></button>
+        <div class="popup__container">
+            <button type="button" class="popup__close" aria-label="Закрыть форму" title="Закрыть форму"></button>
             <h3 class="popup__title">Редактировать профиль</h3>
-            <form class="popup__container">
+            <form class="popup__form">
                 <input type="text" id="heading" name="heading" placeholder="Жак-Ив Кусто"
-                    class="popup__input popup__input_heading">
+                    class="popup__input popup__input_heading_text" required>
                 <input type="text" id="subheading" name="subheading" placeholder="Исследователь океана"
-                    class="popup__input popup__input_subheading">
-                <button type="submit" class="popup__addBtn" title="Сохранить">Сохранить</button>
+                    class="popup__input popup__input_subheading_text" required>
+                <button type="submit" class="popup__add-btn" aria-label="Сохранить" title="Сохранить">Сохранить</button>
             </form>
         </div>
     </div>
-    <script src="./index/index.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
