--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="elements__info">
                             <h2 class="elements__title">Судан</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
-                                class="like__btn like__active"></button>
+                                class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
@@ -41,7 +41,7 @@
                         <div class="elements__info">
                             <h2 class="elements__title">Мальдивы</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
-                                class="like__btn like__active"></button>
+                                class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
@@ -49,7 +49,7 @@
                         <div class="elements__info">
                             <h2 class="elements__title">Португалия</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
-                                class="like__btn like__active"></button>
+                                class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
@@ -57,7 +57,7 @@
                         <div class="elements__info">
                             <h2 class="elements__title">Кумано</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
-                                class="like__btn like__active"></button>
+                                class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
@@ -65,7 +65,7 @@
                         <div class="elements__info">
                             <h2 class="elements__title">Родос</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
-                                class="like__btn like__active"></button>
+                                class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
@@ -73,7 +73,7 @@
                         <div class="elements__info">
                             <h2 class="elements__title">Португалия</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
-                                class="like__btn like__active"></button>
+                                class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                 </ul>
