--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <div class="popup__container">
             <button type="button" class="popup__close" aria-label="Закрыть форму" title="Закрыть форму"></button>
             <h3 class="popup__title">Редактировать профиль</h3>
-            <form class="popup__form">
+            <form class="popup__form" name="form">
                 <input type="text" id="heading" name="heading" placeholder="Жак-Ив Кусто"
-                    class="popup__input popup__input_heading_text" required>
+                    class="popup__input popup__input_text_heading" required>
                 <input type="text" id="subheading" name="subheading" placeholder="Исследователь океана"
-                    class="popup__input popup__input_subheading_text" required>
+                    class="popup__input popup__input_text_subheading" required>
                 <button type="submit" class="popup__add-btn" aria-label="Сохранить" title="Сохранить">Сохранить</button>
             </form>
         </div>
