--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img src="./image/image.jpg" alt="аватар мерседес" class="profile__image">
+                <img src="./image/image.jpg" alt="аватар" class="profile__image">
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
