--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <section class="elements">
                 <ul class="elements__items">
                     <li class="elements__item">
+                        <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
+                            title="Удалить картинку"></button>
                         <img src="./image/sudan.jpg" alt="Судан" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Судан</h2>
@@ -37,6 +39,8 @@
                         </div>
                     </li>
                     <li class="elements__item">
+                        <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
+                            title="Удалить картинку"></button>
                         <img src="./image/maldive.jpg" alt="Мальдивы" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Мальдивы</h2>
@@ -45,14 +49,18 @@
                         </div>
                     </li>
                     <li class="elements__item">
-                        <img src="./image/portugali1.jpg" alt="Португалия" class="elements__img">
+                        <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
+                            title="Удалить картинку"></button>
+                        <img src="./image/Réunion.jpg" alt="Реюньон" class="elements__img">
                         <div class="elements__info">
-                            <h2 class="elements__title">Португалия</h2>
+                            <h2 class="elements__title">Реюньон</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
                                 class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
+                        <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
+                            title="Удалить картинку"></button>
                         <img src="./image/kumano.jpg" alt="Кумано" class="elements__img">
                         <div class="elements__info">
                             <h2 class="elements__title">Кумано</h2>
@@ -61,17 +69,21 @@
                         </div>
                     </li>
                     <li class="elements__item">
-                        <img src="./image/rodos.jpg" alt="Родос" class="elements__img">
+                        <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
+                            title="Удалить картинку"></button>
+                        <img src="./image/florencia.jpg" alt="Флоренция" class="elements__img">
                         <div class="elements__info">
-                            <h2 class="elements__title">Родос</h2>
+                            <h2 class="elements__title">Флоренция</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
                                 class="elements__like-btn elements__like-btn_active"></button>
                         </div>
                     </li>
                     <li class="elements__item">
-                        <img src="./image/portugal.jpg" alt="Португалия" class="elements__img">
+                        <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
+                            title="Удалить картинку"></button>
+                        <img src="./image/islands.jpg" alt="Исландия" class="elements__img">
                         <div class="elements__info">
-                            <h2 class="elements__title">Португалия</h2>
+                            <h2 class="elements__title">Исландия</h2>
                             <button type="button" aria-label="Нравится" title="Нравится"
                                 class="elements__like-btn elements__like-btn_active"></button>
                         </div>
@@ -98,6 +110,22 @@
             </form>
         </div>
     </div>
+
+    <div class="popuup">
+        <div class="popuup__container">
+            <button type="button" class="popuup__close" aria-label="Закрыть форму" title="Закрыть форму"></button>
+            <h3 class="popuup__title">Новое место</h3>
+            <form class="popuup__form" name="form">
+                <input type="text" id="heading" name="heading" placeholder="Название"
+                    class="popuup__input popuup__input_text_heading" required>
+                <input type="text" id="subheading" name="link" placeholder="Ссылка на картинку"
+                    class="popuup__input popup__input_text_link" required>
+                <button type="submit" class="popuup__add-btn" aria-label="Создать" title="Создать">Создать</button>
+            </form>
+        </div>
+    </div>
+
+
     <script src="./scripts/index.js"></script>
 </body>
 
