--- a/index.html
+++ b/index.html
@@ -34,59 +34,59 @@
             <p class="footer__copyright">&copy;&nbsp;2022 Mesto Russia Дмитрий Рябов</p>
         </footer>
 
-    
-    <div class="popup popup_type_profile-edit">
-        <div class="popup__container">
-            <button type="button" class="popup__close popup__close_type_profile-edit" aria-label="Закрыть форму"
-                title="Закрыть форму"></button>
-            <h3 class="popup__title">Редактировать профиль</h3>
-            <form class="popup__form" name="form">
-                <input type="text" id="name" name="name" placeholder="Жак-Ив Кусто"
-                    class="popup__input popup__input_type_name" required>
-                <input type="text" id="subheading" name="subheading" placeholder="Исследователь океана"
-                    class="popup__input popup__input_type_subheading" required>
-                <button type="submit" class="popup__save-btn button" aria-label="Сохранить"
-                    title="Сохранить">Сохранить</button>
-            </form>
-        </div>
-    </div>
 
-    <div class="popup popup_type_add-cards">
-        <div class="popup__container">
-            <button type="button" class="popup__close popup__close_type_add-cards" aria-label="Закрыть форму"
-                title="Закрыть форму"></button>
-            <h3 class="popup__title">Новое место</h3>
-            <form class="popup__form" name="form">
-                <input type="text" id="card-name" name="card-name" placeholder="Название"
-                    class="popup__input popup__input_type_card-name" required>
-                <input type="search" id="card-link" name="card-link" placeholder="Ссылка на картинку"
-                    class="popup__input popup__input_type_card-link" required>
-                <button type="submit" class="popup__create-card button" aria-label="Создать"
-                    title="Создать">Создать</button>
-            </form>
-        </div>
-    </div>
-    <div class="popup popup_type_image">
-        <div class="popup__image-container">
-            <img src="#" alt="Изображение" class="popup__open-image">
-            <p class="popup__image-caption"></p>
-            <button type="button" class="popup__close popup__close_type_image"></button>
-        </div>
-    </div>
-
-    <template class="template">
-        <li class="elements__item">
-            <img alt="Изображение" class="elements__img">
-            <div class="elements__info">
-                <h2 class="elements__title"></h2>
-                <button type="button" aria-label="Нравится" title="Нравится" class="elements__like-btn"></button>
-                <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
-                    title="Удалить картинку"></button>
+        <div class="popup popup_type_profile-edit">
+            <div class="popup__container">
+                <button type="button" class="popup__close popup__close_type_profile-edit" aria-label="Закрыть форму"
+                    title="Закрыть форму"></button>
+                <h3 class="popup__title">Редактировать профиль</h3>
+                <form class="popup__form popup__form-profile" name="form">
+                    <input type="text" id="name" name="name" placeholder="Имя"
+                        class="popup__input popup__input_type_name" required>
+                    <input type="text" id="subheading" name="job" placeholder="Занятие"
+                        class="popup__input popup__input_type_job" required>
+                    <button type="submit" class="popup__save-btn button" aria-label="Сохранить"
+                        title="Сохранить">Сохранить</button>
+                </form>
             </div>
-        </li>
-    </template>
-</div>
-    <script src="./scripts/scripts.js"></script>
+        </div>
+
+        <div class="popup popup_type_add-cards">
+            <div class="popup__container">
+                <button type="button" class="popup__close popup__close_type_add-cards" aria-label="Закрыть форму"
+                    title="Закрыть форму"></button>
+                <h3 class="popup__title">Новое место</h3>
+                <form class="popup__form popup__form_add-cards" name="form">
+                    <input type="text" id="card-name" name="card-name" placeholder="Название"
+                        class="popup__input popup__input_type_card-name" required>
+                    <input type="url" id="card-link" name="card-link" placeholder="Ссылка на картинку"
+                        class="popup__input popup__input_type_card-link" required>
+                    <button type="submit" class="popup__create-card button" aria-label="Создать"
+                        title="Создать">Создать</button>
+                </form>
+            </div>
+        </div>
+        <div class="popup popup__image popup_type_image">
+            <div class="popup__image-container">
+                <img src="#" alt="Изображение" class="popup__open-image">
+                <p class="popup__image-caption"></p>
+                <button type="button" class="popup__close popup__close_type_image"></button>
+            </div>
+        </div>
+
+        <template class="template">
+            <li class="elements__item">
+                <img alt="Изображение" class="elements__img">
+                <div class="elements__info">
+                    <h2 class="elements__title"></h2>
+                    <button type="button" aria-label="Нравится" title="Нравится" class="elements__like-btn"></button>
+                    <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
+                        title="Удалить картинку"></button>
+                </div>
+            </li>
+        </template>
+    </div>
+    <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
