--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__image popup_type_image">
+        <div class="popup popup-image popup_type_image">
             <div class="popup__image-container">
                 <img src="#" alt="Изображение" class="popup__open-image">
                 <p class="popup__image-caption"></p>
