--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
                 <button type="button" class="popup__close popup__close_type_profile-edit" aria-label="Закрыть форму"
                     title="Закрыть форму"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <form class="popup__form popup__form-profile" name="form">
-                    <input type="text" id="name" name="name" placeholder="Имя"
-                        class="popup__input popup__input_type_name" required>
-                    <input type="text" id="subheading" name="job" placeholder="Занятие"
-                        class="popup__input popup__input_type_job" required>
-                    <button type="submit" class="popup__save-btn button" aria-label="Сохранить"
+                <form class="popup__form popup__form-profile" name="form" novalidate>
+                    <div class="input__container">
+                        <input id="username" type="text" name="name" placeholder="Имя"
+                            class="popup__input popup__input_type_name" minlength="2" maxlength="40" required>
+                        <span id="error-username" class="error-message"></span>
+                    </div>
+                    <div class="input__container">
+                        <input id="namejob" type="text" name="job" placeholder="Занятие"
+                            class="popup__input popup__input_type_job" minlength="2" maxlength="200" required>
+                        <span id="error-namejob" class="error-message"></span>
+                    </div>
+                    <button id="submit" type="submit" class="popup__save-btn button" aria-label="Сохранить"
                         title="Сохранить">Сохранить</button>
                 </form>
             </div>
@@ -56,12 +62,18 @@
                 <button type="button" class="popup__close popup__close_type_add-cards" aria-label="Закрыть форму"
                     title="Закрыть форму"></button>
                 <h3 class="popup__title">Новое место</h3>
-                <form class="popup__form popup__form_add-cards" name="form">
-                    <input type="text" id="card-name" name="card-name" placeholder="Название"
-                        class="popup__input popup__input_type_card-name" required>
-                    <input type="url" id="card-link" name="card-link" placeholder="Ссылка на картинку"
-                        class="popup__input popup__input_type_card-link" required>
-                    <button type="submit" class="popup__create-card button" aria-label="Создать"
+                <form class="popup__form popup__form_add-cards" name="form" novalidate>
+                    <div class="input__container">
+                        <input id="cardname" type="text" name="card-name" placeholder="Название"
+                            class="popup__input popup__input_type_card-name" minlength="2" maxlength="30" required>
+                        <span id="error-cardname" class="error-message"></span>
+                    </div>
+                    <div class="input__container">
+                        <input id="cardlink" type="url" name="card-link" placeholder="Ссылка на картинку"
+                            class="popup__input popup__input_type_card-link" required>
+                        <span id="error-cardlink" class="error-message"></span>
+                    </div>
+                    <button id="submit" type="submit" class="popup__create-card button" aria-label="Создать"
                         title="Создать">Создать</button>
                 </form>
             </div>
@@ -87,6 +99,7 @@
         </template>
     </div>
     <script src="./scripts/cards.js"></script>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
