button:delete-duble cursor

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             class="popup__input popup__input_type_card-link" required>
                         <span id="error-cardlink" class="error-message"></span>
                     </div>
-                    <button id="submit" type="submit" class="popup__create-card button" aria-label="Создать"
+                    <button type="submit" class="popup__create-card button" aria-label="Создать"
                         title="Создать">Создать</button>
                 </form>
             </div>
