--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     title="Закрыть форму"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form class="popup__form popup__form-profile" name="form" novalidate>
-                    <div class="input__container">
+                    <div class="input-container">
                         <input id="username" type="text" name="name" placeholder="Имя"
                             class="popup__input popup__input_type_name" minlength="2" maxlength="40" required>
                         <span id="error-username" class="error-message"></span>
                     </div>
-                    <div class="input__container">
+                    <div class="input-container">
                         <input id="namejob" type="text" name="job" placeholder="Занятие"
                             class="popup__input popup__input_type_job" minlength="2" maxlength="200" required>
                         <span id="error-namejob" class="error-message"></span>
@@ -63,12 +63,12 @@
                     title="Закрыть форму"></button>
                 <h3 class="popup__title">Новое место</h3>
                 <form class="popup__form popup__form_add-cards" name="form" novalidate>
-                    <div class="input__container">
+                    <div class="input-container">
                         <input id="cardname" type="text" name="card-name" placeholder="Название"
                             class="popup__input popup__input_type_card-name" minlength="2" maxlength="30" required>
                         <span id="error-cardname" class="error-message"></span>
                     </div>
-                    <div class="input__container">
+                    <div class="input-container">
                         <input id="cardlink" type="url" name="card-link" placeholder="Ссылка на картинку"
                             class="popup__input popup__input_type_card-link" required>
                         <span id="error-cardlink" class="error-message"></span>
