--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
             </li>
         </template>
     </div>
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
