changing the names of functions, variables, as well as amendments to enablevalidation

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img src="./image/logo(1).svg" alt="логотип место" class="header__logo">
+            <img src="./images/logo(1).svg" alt="логотип место" class="header__logo">
         </header>
         <main class="content">
             <section class="profile">
-                <img src="./image/image.jpg" alt="аватар" class="profile__image">
+                <img src="./images/image.jpg" alt="аватар" class="profile__image">
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
