--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img src="<%=require('./images/logo(1).svg" alt="логотип место" class="header__logo">
+            <img src="<%=require('./images/logo(1).svg')%>" alt="логотип место" class="header__logo">
         </header>
         <main class="content">
             <section class="profile">
-                <img src="<%=require('./images/image.jpg" alt="аватар" class="profile__image">
+                <img src="<%=require('./images/image.jpg')%>" alt="аватар" class="profile__image">
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
@@ -98,7 +98,7 @@
             </li>
         </template>
     </div>
-    <!-- <script type="module" src="./src/index.js"></script> -->
+    
 </body>
 
 </html>
