--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img src="<%=require('./images/image.jpg')%>" alt="аватар" class="profile__image">
+                <button type="button" aria-label="Обновить аватар" title="Обновить аватар" class="profile__edit">
+                    <img src="<%=require('./images/image.jpg')%>" alt="аватар" class="profile__image"></button>
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
@@ -64,17 +65,17 @@
                 <h3 class="popup__title">Новое место</h3>
                 <form class="popup__form popup__form_add-cards" name="form" novalidate>
                     <div class="input-container">
-                        <input id="cardname" type="text" name="card-name" placeholder="Название"
+                        <input id="cardname" type="text" name="cardName" placeholder="Название"
                             class="popup__input popup__input_type_card-name" minlength="2" maxlength="30" required>
                         <span id="error-cardname" class="error-message"></span>
                     </div>
                     <div class="input-container">
-                        <input id="cardlink" type="url" name="card-link" placeholder="Ссылка на картинку"
+                        <input id="cardlink" type="url" name="cardLink" placeholder="Ссылка на картинку"
                             class="popup__input popup__input_type_card-link" required>
                         <span id="error-cardlink" class="error-message"></span>
                     </div>
-                    <button type="submit" class="popup__create-card button" aria-label="Создать"
-                        title="Создать">Создать</button>
+                    <button type="submit" class="popup__create-card popup__save-btn button" aria-label="Создать"
+                        title="Создать">Сохранить</button>
                 </form>
             </div>
         </div>
@@ -86,19 +87,50 @@
             </div>
         </div>
 
+        <div class="popup popup_type_confirmation">
+            <div class="popup__confirmation-container">
+                <h3 class="popup__title-confirmation">Вы&nbsp;уверены?</h3>
+                <form class="popup__form" name="confirmation-form" novalidate>
+                    <button class="button " type="submit"
+                        aria-label="Вы&nbsp;уверены?" title="Вы&nbsp;уверены?">Да</button>
+                </form>
+                <button type="button" class="popup__close popup__close_type_confirmation"></button>
+            </div>
+        </div>
+
+        <div class="popup popup_type_update-avatar">
+            <div class="popup__avatar-container popup__container">
+                <h3 class="popup__title">Обновить аватар</h3>
+                <form name="form" class="popup__form popup__form_type_update-avatar" novalidate>
+                    <div class="input-container">
+                        <input id="avatar-link-input" name="avatar" type="url" class="popup__input popup__input_type_update-avatar"
+                            placeholder="Ссылка на картинку" required>
+                    </div>
+                    <span id="error-avatar-link-input" class="error-message"></span>
+                    <button type="submit" aria-label="Сохранить" title="Сохранить"
+                        class="popup__save-btn popup__create-card button">Сохранить</button>
+                </form>
+                <button type="button" class="popup__close popup__close_type_update-avatar"></button>
+            </div>
+        </div>
+
         <template class="template">
             <li class="elements__item">
                 <img alt="Изображение" class="elements__img">
                 <div class="elements__info">
                     <h2 class="elements__title"></h2>
-                    <button type="button" aria-label="Нравится" title="Нравится" class="elements__like-btn"></button>
+                    <div class="elements__likes">
+                        <button type="button" aria-label="Нравится" title="Нравится"
+                            class="elements__like-btn"></button>
+                        <span class="elements__numberoflikes"></span>
+                    </div>
                     <button class="elements__delete-btn" type="button" aria-label="Удалить картинку"
                         title="Удалить картинку"></button>
                 </div>
             </li>
         </template>
     </div>
-    
+
 </body>
 
 </html>
