--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/icons8-галерея-16.png" />
     <title>Галерея карточек</title>
     <!-- <link rel="stylesheet" href="./pages/index.css"> -->
   </head>
